cmake_minimum_required(VERSION 3.23)
project(AdventOfCode22)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdventOfCode22_1 day1/day1.cpp)
add_executable(AdventOfCode22_2 day2/day2.cpp)
add_executable(AdventOfCode22_3 day3/day3.cpp)
add_executable(AdventOfCode22_4 day4/day4.cpp)
add_executable(AdventOfCode22_5 day5/day5.cpp)
