cmake_minimum_required(VERSION 3.23)
project(AdventOfCode22)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdventOfCode22_1 day1/day1.cpp)
add_executable(AdventOfCode22_2 day2/day2.cpp)
add_executable(AdventOfCode22_3 day3/day3.cpp)
add_executable(AdventOfCode22_4 day4/day4.cpp)
add_executable(AdventOfCode22_5 day5/day5.cpp)
add_executable(AdventOfCode22_6 day6/day6.cpp)
add_executable(AdventOfCode22_7 day7/day7.cpp)
add_executable(AdventOfCode22_8 day8/day8.cpp)
add_executable(AdventOfCode22_9 day9/day9.cpp)
add_executable(AdventOfCode22_10 day10/day10.cpp)
add_executable(AdventOfCode22_11 day11/day11.cpp)
add_executable(AdventOfCode22_11_1 day11/day11checker.cpp)
add_executable(AdventOfCode22_11_2 day11/checker2.cpp)
